--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,18 +9,25 @@
 
     {% block styles %}
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     {% endblock %}
 
 
 </head>
-
-{% block content %}
 <body>
+{% block content %}
 
+
+
+
+
+{% endblock %}
 {% block scripts %}
-<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="http://js.leapmotion.com/leap-0.6.3.js"></script>
+    <script src="http://js.leapmotion.com/leap-plugins-0.1.8.js"></script>
+    <script type="text/javascript" src="../static/js/app.js"></script>
 {% endblock %}
-
 </body>
-{% endblock %}
 </html>
