--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,15 @@
-{% extends "layout.html" %}
-{% block content %}
+
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>The Leapalyzer</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+<body>
+
 <h1>Hello World</h1>
 <canvas id="canvas">
 
@@ -8,4 +18,14 @@
 
 
 
-{% endblock %}
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="http://js.leapmotion.com/leap-0.6.3.js"></script>
+<script src="http://js.leapmotion.com/leap-plugins-0.1.8.js"></script>
+<script type="text/javascript" src="../static/js/app.js"></script>
+</body>
+</html>
+
+
+
