--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,10 @@
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script src="http://js.leapmotion.com/leap-0.6.3.js"></script>
 <script src="http://js.leapmotion.com/leap-plugins-0.1.8.js"></script>
+<script src="../static/js/flocking/flocking-all.min.js"></script>
+<script src="../static/js/myStuff.js"></script>
 <script type="text/javascript" src="../static/js/app.js"></script>
+
 </body>
 </html>
 
