--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,18 @@
     <title>The Leapalyzer</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
 
-<h1>Hello World</h1>
 <canvas id="canvas">
 
 
 </canvas>
+<div class="options-menu">
+<h1>OPTIONS MENU!</h1>
 
-
-
+</div>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
