--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,35 @@
 
 </canvas>
 <div class="options-menu">
-<h1>OPTIONS MENU!</h1>
-
+<div class="row">
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <p>Options Menu</p>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+        <label>
+        <input type="radio" name="wave" value="sine"/>
+        <img id="sineOption" class="img-responsive" src="../static/images/sine_wave-256.png">
+        </label>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+        <label>
+        <input type="radio" name="wave" value="square"/>
+        <img id="squareOption" class="img-responsive" src="../static/images/square_wave-256.png">
+        </label>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+        <label>
+        <input type="radio" name="wave" value="triangle"/>
+        <img id="triangleOption" class="img-responsive" src="../static/images/triangular_wave-256.png">
+        </label>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+        <label>
+        <input type="radio" name="wave" value="sawtooth"/>
+        <img id="sawtoothOption" class="img-responsive" src="../static/images/sawtooth_wave-256.png">
+        </label>
+    </div>
+</div>
 </div>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -27,6 +54,7 @@
 <script src="../static/js/flocking/flocking-all.min.js"></script>
 <script src="../static/js/myStuff.js"></script>
 <script type="text/javascript" src="../static/js/app.js"></script>
+<script type="text/javascript" src="../static/js/options.js"></script>
 
 </body>
 </html>
