--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,9 @@
 <script src="http://js.leapmotion.com/leap-0.6.3.js"></script>
 <script src="http://js.leapmotion.com/leap-plugins-0.1.8.js"></script>
 <script src="../static/js/flocking/flocking-all.min.js"></script>
-<script src="../static/js/myStuff.js"></script>
-<script type="text/javascript" src="../static/js/app.js"></script>
+<!-- <script src="../static/js/myStuff.js"></script> -->
+<!-- <script type="text/javascript" src="../static/js/app.js"></script> -->
+<script type="text/javascript" src="../static/js/web-audio.js"></script>
 
 </body>
 </html>
