Set up leap to pass waves and frequencies correctly

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
         <label>
-        <input type="radio" name="wave" value="sine"/>
+        <input type="radio" name="wave" value="sine" checked="checked"/>
         <img id="sineOption" class="img-responsive" src="../static/images/sine_wave-256.png">
         </label>
     </div>
